--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <p class="intro">
 Check your mmr for normals! Currently only works for NA.
 To get the most accurate mmr, play 20 games solo in normals. Queueing with other players will cause inaccurate result. <br><br>
-The tool uses this <a href="/table.html" target="_blank" class="raw-data">table</a> to convert rank to mmr. If you would like to report any inaccuracies with the data, please contact Wayne.
+The tool uses this <a href="/table.html" target="_blank">table</a> to convert rank to mmr. If you would like to report any inaccuracies with the data, please contact Wayne.
 </p>
 
 
@@ -40,6 +40,8 @@ The tool uses this <a href="/table.html" target="_blank" class="raw-data">table<
       </div>
 
     </div>
+
+    <p id="legal">Made by Wayne. Contact Wayne to report any inaccuracies or suggestions to improve the site.</p>
 
     
 
