--- a/public/team.html
+++ b/public/team.html
@@ -57,7 +57,9 @@
   </div>
 </div>
 
-<button class="copybtn" role="button">Copy Team</button>
+<button class="copybtn prettybtn" role="button">Copy Team</button>
+
+<button class="try prettybtn" role="button">Try Next Best Team</button>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="champ.js"></script>
