--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@ The tool uses this <a href="/table.html" target="_blank">table</a> to convert ra
             <h1>Your MMR is:</h1>
             <h2 class="mmr"></h2>
 
+            <h1>Old formula mmr:</h1>
+            <h2 class="mmr2"></h2>
+
+
             <p>
               Want to see how this value was calculated? <a target="_blank" class="raw-data">View the raw data</a>.
             </p>
