--- a/public/team.html
+++ b/public/team.html
@@ -19,6 +19,8 @@
       Two teams will be created with closest possible MMR averages.
     </p>
 
+    <p>Remove decimals and make sure everyone has a unique mmr in your input!</p>
+
     <h3>Sample Input</h3>
       <pre>
         zika:2414, tarzan:1635, scout:1245, gala:2156, hang:1429, zeus:3514, oner:2425, faker:3524, gumayusi:2421, keria:2321
