--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
 <div class="navigation">
     <a href="/">MMR Checker</a>
-    <a href="/team.html">Team Maker</a>
+    <a href="/team.html">Team Maker Classic</a>
+    <a href="/team2.html">Team Maker 2</a>
 </div>
-
 
     <div class="container">
 
