--- a/public/flex.html
+++ b/public/flex.html
@@ -24,10 +24,8 @@
         <div class="historyContainer">
 
 
-<p class="intro">
-To get the most accurate mmr, play 20 games solo in normals. 
-<br><br>
-Queueing with other players will cause inaccurate result. <br><br>
+<p style="font-size: 26px;" class="intro">
+Get Flex MMR
 </p>
 
 
@@ -60,7 +58,7 @@ Queueing with other players will cause inaccurate result. <br><br>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="champ.js"></script>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
   </body>
