--- a/public/team2.html
+++ b/public/team2.html
@@ -12,6 +12,7 @@
 
 <div class="navigation">
     <a href="/">MMR Checker</a>
+    <a href="/flex.html">Flex MMR Checker</a>
     <a href="/team.html">Team Maker Classic</a>
     <a href="/team2.html">Team Maker 2</a>
 </div>
