--- a/public/checklist.html
+++ b/public/checklist.html
@@ -10,7 +10,6 @@
     .checklist {
     width: 60%;
     display: flex;
-    margin: 0 auto;
     flex-wrap: wrap;
     background: #0a0218eb;
     padding: 14px;
@@ -20,6 +19,14 @@
     font-size: 11px;
 
     }
+
+    .progress {
+      width: 10%;
+      background: #0a0218eb;
+
+
+    }
+
 
     .item {
       width: 14%;
@@ -60,9 +67,17 @@ text-align: center;
     <a href="/team2.html">Team Maker 2</a>
 </div>
 
+  <div style="display: flex">
+
     <div class="checklist">
       
     </div>
+
+    <div class="progress">
+      
+    </div>
+
+  </div>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="checklist.js"></script>
