--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <a href="/checklist.html">Legendary Items Checklist</a>
     <a href="/">MMR Checker</a>
     <a href="/flex.html">Flex MMR Checker</a>
-    <a href="/team.html">Team Maker Classic</a>
-    <a href="/team2.html">Team Maker 2</a>
+    <a href="/team.html">Team Maker</a>
 </div>
 
     <div class="container">
@@ -26,22 +25,44 @@
         <div class="historyContainer">
 
 
+
+  <div class="region">
+    <div class="option selected">
+      NA
+    </div>
+    <div class="option">
+      EUW
+    </div>
+    <div class="option">
+      EUNE
+    </div>
+  </div>
+
+  <div class="mode">
+    <div class="option selected">
+      Norm SR
+    </div>
+    <div class="option">
+      ARAM
+    </div>
+  </div>
+
+
 <p class="intro">
+
+
 To get the most accurate mmr, play 20 games solo in normals. 
 <br><br>
 Queueing with other players will cause inaccurate result. <br><br>
 </p>
 
 
-          <div style="display: none;margin-top: 150px" id="status"></div>
+          <div style="display: none;margin-top: 100px" id="status"></div>
           <div class="mmr-container">
-            <h1>Your MMR is:</h1>
+            <h1 style="
+                margin-top: 30px;
+            ">Your MMR is:</h1>
             <h2 class="mmr"></h2>
-
-            <h1>Old formula mmr:</h1>
-            <h2 class="mmr2"></h2>
-
-
             <p>
               Want to see how this value was calculated? <a target="_blank" style="color: white;" class="raw-data">View the raw data</a>.
             </p>
