--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -66,8 +66,7 @@
     <a href="/checklist.html">Legendary Items Checklist</a>
     <a href="/">MMR Checker</a>
     <a href="/flex.html">Flex MMR Checker</a>
-    <a href="/team.html">Team Maker Classic</a>
-    <a href="/team2.html">Team Maker 2</a>
+    <a href="/team.html">Team Maker</a>
 </div>
 
 
