--- a/public/checklist.html
+++ b/public/checklist.html
@@ -88,8 +88,7 @@ text-align: center;
     <a href="/checklist.html">Legendary Items Checklist</a>
     <a href="/">MMR Checker</a>
     <a href="/flex.html">Flex MMR Checker</a>
-    <a href="/team.html">Team Maker Classic</a>
-    <a href="/team2.html">Team Maker 2</a>
+    <a href="/team.html">Team Maker</a>
 </div>
 
   <div class="checkbox-container" style="display: flex">
