--- a/public/flex.html
+++ b/public/flex.html
@@ -14,8 +14,7 @@
     <a href="/checklist.html">Legendary Items Checklist</a>
     <a href="/">MMR Checker</a>
     <a href="/flex.html">Flex MMR Checker</a>
-    <a href="/team.html">Team Maker Classic</a>
-    <a href="/team2.html">Team Maker 2</a>
+    <a href="/team.html">Team Maker</a>
 </div>
 
     <div class="container">
