added br, bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <div class="option">
       EUNE
     </div>
+    <div class="option">
+      BR
+    </div>
   </div>
 
   <div class="mode">
