--- a/public/checklist.html
+++ b/public/checklist.html
@@ -78,6 +78,17 @@ text-align: center;
       opacity: .2;
     }
 
+    .info {
+    font-size: 14px;
+    color: gray;
+    margin-top: 22px;
+    display: flex;
+    }
+
+    .icon {
+      font-size: 20px;
+    }
+
 
     </style>
   </head>
@@ -100,6 +111,13 @@ text-align: center;
       <h3>Progress</h3>
       <div class="current-rank"></div>
       <div class="next-rank"></div>
+      <div  class="info">
+        <div class="icon">🛈</div> 
+        <div style="
+    text-align: left;
+    margin-left: 12px;
+        ">Support items may not count toward progress</div>
+      </div>
     </div>
 
   </div>
