--- a/public/checklist.html
+++ b/public/checklist.html
@@ -80,7 +80,7 @@ text-align: center;
 
     .info {
     font-size: 14px;
-    color: gray;
+    color: #6b6bfb;
     margin-top: 22px;
     display: flex;
     }
@@ -116,7 +116,7 @@ text-align: center;
         <div style="
     text-align: left;
     margin-left: 12px;
-        ">Support items may not count toward progress</div>
+        ">Must upgrade support item through shop in base to get progress</div>
       </div>
     </div>
 
