--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -242,6 +242,11 @@
         "points": 26555
     },
     {
+        "name": "vkie#EUW",
+        "region": "euw",
+        "points": 26545
+    },
+    {
         "name": "Shini 彡#Solar",
         "region": "br",
         "points": 26530
