--- a/public/checklist.html
+++ b/public/checklist.html
@@ -12,6 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-start;
+        margin-top: 3.5%;
 
       }
 
