--- a/public/secret/index.html
+++ b/public/secret/index.html
@@ -9,13 +9,11 @@
 
     <body>
 
-        <div class="navigation">
-            <a href="/leaderboard.html">Challenge Leaderboard</a>
-                    <a href="/catch.html">Catch'em All Tracker</a>
-            <a href="/checklist.html">Legendary Items Checklist</a>
-            <a href="/">MMR Checker</a>
-            <a href="/team.html">Team Maker</a>
-        </div>
+    <div class="navigation">
+        <a href="/">Catch'em All Tracker</a>
+        <a href="/checklist">Legendary Items Checklist</a>
+        <a href="/leaderboard">Challenge Leaderboard</a>
+    </div>
 
         <div class="container">
             <div id="matchHistory">
