--- a/public/leaderboard/index.html
+++ b/public/leaderboard/index.html
@@ -103,7 +103,8 @@
 
     <div class="navigation">
         <a href="/">Catch'em All Tracker</a>
-        <a href="/checklist">Legendary Items Checklist</a>
+        <a href="/champions">Champions Checklist</a>
+        <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
     </div>
 
