--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -98,7 +98,8 @@ text-align: center;
   <body>
     <div class="navigation">
         <a href="/">Catch'em All Tracker</a>
-        <a href="/checklist">Legendary Items Checklist</a>
+        <a href="/champions">Champions Checklist</a>
+        <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
     </div>
 
