--- a/public/index.html
+++ b/public/index.html
@@ -293,7 +293,8 @@ background: #000c9d94;
   <body>
     <div class="navigation">
         <a href="/">Catch'em All Tracker</a>
-        <a href="/checklist">Legendary Items Checklist</a>
+        <a href="/champions">Champions Checklist</a>
+        <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
     </div>
 
