--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Checklist</title>
-    <link rel="stylesheet" href="/style.css">
-    <style>
+<head>
+  <meta charset="UTF-8">
+  <title>Checklist</title>
+  <link rel="stylesheet" href="/style.css">
+  <style>
 
-      .checkbox-container {
+    .checkbox-container {
 
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        margin-top: 3.5%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 3.5%;
 
-      }
+    }
 
     .checklist {
-    width: 50%;
-    display: flex;
-    flex-wrap: wrap;
-    background: #0a0218eb;
-    padding: 14px;
-    height: 86vh;
-    overflow-y: scroll;
-    margin-top: 2%;
-    font-size: 11px;
-    margin-left:   20px;
+      width: 50%;
+      display: flex;
+      flex-wrap: wrap;
+      background: #0a0218eb;
+      padding: 14px;
+      height: 86vh;
+      overflow-y: scroll;
+      margin-top: 2%;
+      font-size: 11px;
+      margin-left:   20px;
 
     }
 
@@ -34,20 +34,20 @@
       width: 20%;
       background: #0a0218eb;
       margin-top: 2%;
-    color: white;
-    padding: 20px;
-    border-radius: 8px
+      color: white;
+      padding: 20px;
+      border-radius: 8px
 
     }
 
     .progress h3 {
       margin: 0 0 20px 0;
-    font-size: 20px;
+      font-size: 20px;
     }
 
     .current-rank {
-          font-size: 40px;
-    margin-bottom: 20px;
+      font-size: 40px;
+      margin-bottom: 20px;
     }
 
     .next-rank {
@@ -57,10 +57,10 @@
 
     .item {
       width: 14%;
-text-align: center;
-    color: white;
-          margin-bottom: 10px;
-          cursor: pointer;
+      text-align: center;
+      color: white;
+      margin-bottom: 10px;
+      cursor: pointer;
 
     }
 
@@ -81,10 +81,10 @@ text-align: center;
     }
 
     .info {
-    font-size: 14px;
-    color: #6b6bfb;
-    margin-top: 22px;
-    display: flex;
+      font-size: 14px;
+      color: #6b6bfb;
+      margin-top: 22px;
+      display: flex;
     }
 
     .icon {
@@ -92,16 +92,16 @@ text-align: center;
     }
 
 
-    </style>
-  </head>
+  </style>
+</head>
 
-  <body>
-    <div class="navigation">
-        <a href="/">Catch'em All Tracker</a>
-        <a href="/champions">Champions Checklist</a>
-        <a href="/checklist">Items Checklist</a>
-        <a href="/leaderboard">Challenge Leaderboard</a>
-    </div>
+<body>
+  <div class="navigation">
+    <a href="/">Catch'em All Tracker</a>
+    <a href="/champions">Champions Checklist</a>
+    <a href="/checklist">Items Checklist</a>
+    <a href="/leaderboard">Challenge Leaderboard</a>
+  </div>
 
   <div class="checkbox-container" style="display: flex">
 
@@ -113,8 +113,8 @@ text-align: center;
       <div  class="info">
         <div class="icon">🛈</div> 
         <div style="
-    text-align: left;
-    margin-left: 12px;
+        text-align: left;
+        margin-left: 12px;
         ">Must upgrade support item through shop in base to get progress</div>
       </div>
     </div>
@@ -127,7 +127,8 @@ text-align: center;
 
   </div>
 
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="checklist.js"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="checklist.js"></script>
+  <script src="/background.js"></script>
+</body>
 </html>
