--- a/public/leaderboard/index.html
+++ b/public/leaderboard/index.html
@@ -170,7 +170,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
+
+
+        <script src="page1.js"></script>
+        <script src="page2.js"></script>
+        <script src="page3.js"></script>
+        <script src="page4.js"></script>
+        <script src="page5.js"></script>
         <script src="leaderboard.js"></script>
-  <script src="/background.js"></script>
+
+
+
+        <script src="/background.js"></script>
     </body>
 </html>
