--- a/public/champions/index.html
+++ b/public/champions/index.html
@@ -165,6 +165,7 @@
         <a href="/champions">Champions Checklist</a>
         <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
+        <a href="/leagueofwhales">Whales Leaderboard</a>
     </div>
   <div class="checkbox-container" style="display: flex;">
 
