--- a/public/index.html
+++ b/public/index.html
@@ -296,6 +296,7 @@ background: #000c9d94;
         <a href="/champions">Champions Checklist</a>
         <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
+        <a href="/leagueofwhales">Whales Leaderboard</a>
     </div>
 
     <div class="lookup-container">
