--- a/public/leaderboard/index.html
+++ b/public/leaderboard/index.html
@@ -106,6 +106,7 @@
         <a href="/champions">Champions Checklist</a>
         <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaderboard</a>
+        <a href="/leagueofwhales">Whales Leaderboard</a>
     </div>
 
         <div style="width: 70vw; margin: 50px auto 0;" class="leaderboard-content">
