--- a/public/champions/index.html
+++ b/public/champions/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Catchem All Tracker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
   <link rel="stylesheet" href="/style.css">
 
   <style>
@@ -86,8 +88,6 @@
     .role-container {
       margin-top: 10px;
       margin-bottom: 20px;
-      display: flex;
-      justify-content: center;
     }
 
     .role-option {
@@ -140,6 +140,10 @@
     margin-right: 1%;
     }
 
+    .hide-completed .completed {
+      display: none;
+    }
+
     .champion img {
       width: 100%;
       border: 1px solid #85858559;
@@ -187,37 +191,48 @@
 
       <div class="checklist champion-suggestions">
 
-        <div class="role-container">
-          <span class="role-option all selected">
-            <img src="/roles/all.svg"/>
-          </span>
-          <span class="role-option top">
-            <img src="/roles/top.svg"/>
-          </span>
-          <span class="role-option jg">
-            <img src="/roles/jg.svg"/>
-          </span>
+        <div class="d-flex justify-content-between">
 
-          <span class="role-option mid">
-            <img src="/roles/mid.svg"/>
-          </span>
-          <span class="role-option bot">
-            <img src="/roles/bot.svg"/>
-          </span>
-          <span class="role-option sup">
-            <img src="/roles/sup.svg"/>
-          </span>
+          <div style="width: 175px"></div>
 
+          <div class="role-container">
+            <div class="d-flex align-items-center">
+              <span class="role-option all selected">
+                <img src="/roles/all.svg"/>
+              </span>
+              <span class="role-option top">
+                <img src="/roles/top.svg"/>
+              </span>
+              <span class="role-option jg">
+                <img src="/roles/jg.svg"/>
+              </span>
 
+              <span class="role-option mid">
+                <img src="/roles/mid.svg"/>
+              </span>
+              <span class="role-option bot">
+                <img src="/roles/bot.svg"/>
+              </span>
+              <span class="role-option sup">
+                <img src="/roles/sup.svg"/>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-check form-switch d-flex align-items-center">
+            <input style="margin-right: 8px ; margin-top: -3px;" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label style="color: white" class="form-check-label" for="flexSwitchCheckDefault">Hide completed champions</label>
+          </div>
 
         </div>
 
-        <div style="height: 80vh; overflow-y: scroll;flex-wrap: wrap;" class="champions-list d-flex">
+          <div style="height: 80vh; overflow-y: scroll;flex-wrap: wrap;" class="champions-list d-flex">
+          </div>
 
 
 
 
-        </div>
+
       </div>
 
 
@@ -257,7 +272,8 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
   <script src="checklist.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
