--- a/public/leagueofwhales/index.html
+++ b/public/leagueofwhales/index.html
@@ -151,7 +151,7 @@
             </div>
             <div class="d-flex leaderboard-column-names">
                 <div  class="text-center" style="width: 5%">#</div>
-                <div style="width: 38%">Player</div>
+                <div style="width: 27%">Player</div>
                 <div style="width: 15%">Total RP Value</div>
                 <div style="width: 10%">
                     Skins
@@ -162,8 +162,11 @@
                 <div style="width: 10%">
                     Icons
                 </div>
-                <div>
+                <div style="width: 10%">
                     Ward Skins
+                </div>
+                <div>
+                    Chromas
                 </div>
             </div>
 
