--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -96,6 +96,11 @@
 </head>
 
 <body>
+
+    <div class="discord">
+      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute Project <img style="    vertical-align: middle;" src="/discord.png"/></a>
+    </div>
+
   <div class="navigation">
     <a href="/">Catch'em All Tracker</a>
     <a href="/champions">Champions Checklist</a>
