--- a/public/index.html
+++ b/public/index.html
@@ -291,6 +291,9 @@ background: #000c9d94;
   </head>
 
   <body>
+    <div class="discord">
+      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute Project <img src="/discord.png"/></a>
+    </div>
     <div class="navigation">
         <a href="/">Catch'em All Tracker</a>
         <a href="/champions">Champions Checklist</a>
