--- a/public/leagueofwhales/index.html
+++ b/public/leagueofwhales/index.html
@@ -100,7 +100,9 @@
     </head>
 
     <body>
-
+    <div class="discord">
+      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute Project <img src="/discord.png"/></a>
+    </div>
     <div class="navigation">
         <a href="/">Catch'em All Tracker</a>
         <a href="/champions">Champions Checklist</a>
