--- a/public/index.html
+++ b/public/index.html
@@ -285,21 +285,21 @@ background: #000c9d94;
 
 }
 
-
+  
 
     </style>
   </head>
 
   <body>
     <div class="discord">
-      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute Project <img src="/discord.png"/></a>
+      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute <img src="/discord.png"/></a>
     </div>
     <div class="navigation">
-        <a href="/">Catch'em All Tracker</a>
+        <a href="/">Catch'em All</a>
         <a href="/champions">Champions Checklist</a>
         <a href="/checklist">Items Checklist</a>
-        <a href="/leaderboard">Challenge Leaderboard</a>
-        <a href="/leagueofwhales">Whales Leaderboard</a>
+        <a href="/leaderboard">Challenge Leaders</a>
+        <a href="/leagueofwhales">Whales Leaders</a>
     </div>
 
     <div class="lookup-container">
