--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -97,17 +97,17 @@
 
 <body>
 
-    <div class="discord">
-      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute Project <img style="    vertical-align: middle;" src="/discord.png"/></a>
-    </div>
 
-  <div class="navigation">
-    <a href="/">Catch'em All Tracker</a>
-    <a href="/champions">Champions Checklist</a>
-    <a href="/checklist">Items Checklist</a>
-    <a href="/leaderboard">Challenge Leaderboard</a>
-    <a href="/leagueofwhales">Whales Leaderboard</a>
-  </div>
+    <div class="discord">
+      <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute <img  style="    vertical-align: middle;" src="/discord.png"/></a>
+    </div>
+    <div class="navigation">
+        <a href="/">Catch'em All</a>
+        <a href="/champions">Champions Checklist</a>
+        <a href="/checklist">Items Checklist</a>
+        <a href="/leaderboard">Challenge Leaders</a>
+        <a href="/leagueofwhales">Whales Leaders</a>
+    </div>
 
   <div class="checkbox-container" style="display: flex">
 
