--- a/public/leaderboard/index.html
+++ b/public/leaderboard/index.html
@@ -181,6 +181,7 @@
         <script src="page3.js"></script>
         <script src="page4.js"></script>
         <script src="page5.js"></script>
+        <script src="page6.js"></script>
         <script src="leaderboard.js"></script>
 
 
