--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -102,7 +102,8 @@
       <a target="_blank" href="https://discord.gg/WZMXz76eYk">BFF Research Institute <img  style="    vertical-align: middle;" src="/discord.png"/></a>
     </div>
     <div class="navigation">
-        <a href="/">Catch'em All</a>
+        <a href="/">Mastery</a>
+        <a href="/catch">Catch'em All</a>
         <a href="/champions">Champions Checklist</a>
         <a href="/checklist">Items Checklist</a>
         <a href="/leaderboard">Challenge Leaders</a>
