--- a/public/index.html
+++ b/public/index.html
@@ -373,16 +373,20 @@ margin-top: 7px;
         <div style="align-items: center; display: flex; position: relative;width: 95%;margin: 0 auto;">
 
             <div style="margin-right: 10px" class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle region-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class="btn btn-secondary dropdown-toggle region-toggle" type="button" data-bs-toggle="dropdown"   aria-expanded="false">
                 NA
               </button>
-              <div style="min-width: 100px;" class="dropdown-menu region-menu" aria-labelledby="dropdownMenuButton">
+              <div style="min-width: 100px;" class="dropdown-menu region-menu" >
                 <a class="dropdown-item" href="#">NA</a>
                 <a class="dropdown-item" href="#">EUW</a>
                 <a class="dropdown-item" href="#">EUNE</a>
                 <a class="dropdown-item" href="#">BR</a>
               </div>
             </div>
+
+
+   
+
 
             <input id="userName" placeholder="name#tag"/>
 
